Fix colour of footer links so they're visible in dark and light mode.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -351,7 +351,7 @@ footer {
 }
 
 .footer-content a {
-  color: white;
+  color: var(--color-text-primary);
 }
 
 .section-grey-bg {
